prefinal 0.75